--- a/src/qt/res/bitcoin-qt.rc
+++ b/src/qt/res/bitcoin-qt.rc
@@ -22,7 +22,7 @@ BEGIN
             VALUE "FileDescription",    "Stratis-Qt (OSS GUI client for Stratis)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
             VALUE "InternalName",       "stratis-qt"
-            VALUE "LegalCopyright",     "2009-2014 The Bitcoin developers, 2012-2014 The NovaCoin & PPCoin developers, 2014 The Stratis developers"
+            VALUE "LegalCopyright",     "2009-2014 The Bitcoin developers, 2012-2014 The NovaCoin & PPCoin developers, 2014 The Blackcoin developers, 2016 The Stratis developers"
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
             VALUE "OriginalFilename",   "stratis-qt.exe"
             VALUE "ProductName",        "Stratis-Qt"
