--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 src/*.exe
-src/blackcoin
-src/blackcoind
-src/test_blackcoin
+src/stratis
+src/stratisd
+src/test_stratis
 src/build.h
 .*.swp
 *.*~*
@@ -10,11 +10,11 @@ src/build.h
 *.orig
 *.o
 *.patch
-.blackcoin
+.stratis
 #compilation and Qt preprocessor part
 *.qm
 Makefile
-blackcoin-qt
+stratis-qt
 #resources cpp
 qrc_*.cpp
 #qt creator
