--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -162,7 +162,7 @@ ifeq (${USE_WALLET}, 1)
         obj/walletdb.o
 endif
 
-all: stratisd
+all: dnotesd
 
 LIBS += $(CURDIR)/leveldb/libleveldb.a $(CURDIR)/leveldb/libmemenv.a
 DEFS += $(addprefix -I,$(CURDIR)/leveldb/include)
@@ -203,11 +203,11 @@ obj/%.o: %.c
 	      -e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
 	  rm -f $(@:%.o=%.d)
 
-stratisd: $(OBJS:obj/%=obj/%)
+dnotesd: $(OBJS:obj/%=obj/%)
 	$(LINK) $(xCXXFLAGS) -o $@ $^ $(xLDFLAGS) $(LIBS)
 
 clean:
-	-rm -f stratisd
+	-rm -f dnotesd
 	-rm -f obj/*.o
 	-rm -f obj/*.P
 	-rm -f obj/build.h
