--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -126,6 +126,7 @@ OBJS= \
     obj/sync.o \
     obj/txmempool.o \
     obj/util.o \
+    obj/invoiceutil.o \
     obj/hash.o \
     obj/noui.o \
     obj/kernel.o \
