--- a/share/qt/Info.plist
+++ b/share/qt/Info.plist
@@ -7,23 +7,23 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Stratis-Qt</string>
+	<string>DNotes-Qt</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleExecutable</key>
-	<string>Stratis-Qt</string>
+	<string>DNotes-Qt</string>
 	<key>CFBundleIdentifier</key>
-	<string>co.stratis.Stratis-Qt</string>
+	<string>co.dnotes.DNotes-Qt</string>
         <key>CFBundleURLTypes</key>
         <array>
           <dict>
             <key>CFBundleTypeRole</key>
             <string>Editor</string>
             <key>CFBundleURLName</key>
-            <string>co.stratis.StratisPayment</string>
+            <string>co.dnotes.DNotesPayment</string>
             <key>CFBundleURLSchemes</key>
             <array>
-              <string>stratis</string>
+              <string>dnotes</string>
             </array>
           </dict>
         </array>
