--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -1,4 +1,4 @@
-Source: stratis
+Source: dnotes
 Section: utils
 Priority: optional
 Maintainer: Jonas Smedegaard <dr@jones.dk>
@@ -19,11 +19,11 @@ Build-Depends: debhelper,
  libqt4-dev,
  libqrencode-dev
 Standards-Version: 3.9.2
-Homepage: http://www.stratis.co/
-Vcs-Git: git://github.com/rat4/stratis.git
-Vcs-Browser: http://github.com/rat4/stratis
+Homepage: http://www.dnotesglobal.com/
+Vcs-Git: git://github.com/DNotesCoin/DNotes2.0
+Vcs-Browser: https://github.com/DNotesCoin/DNotes2.0
 
-Package: stratisd
+Package: dnotesd
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - daemon
@@ -38,10 +38,10 @@ Description: peer-to-peer network based digital currency - daemon
  Full transaction history is stored locally at each client.  This
  requires 2+ GB of space, slowly growing.
  .
- This package provides stratisd, a combined daemon and CLI tool to
+ This package provides dnotesd, a combined daemon and CLI tool to
  interact with the daemon.
 
-Package: stratis-qt
+Package: dnotes-qt
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: peer-to-peer network based digital currency - Qt GUI
@@ -56,4 +56,4 @@ Description: peer-to-peer network based digital currency - Qt GUI
  Full transaction history is stored locally at each client.  This
  requires 2+ GB of space, slowly growing.
  .
- This package provides Stratis-Qt, a GUI for Stratis based on Qt.
+ This package provides DNotes-Qt, a GUI for DNotes based on Qt.
