--- a/contrib/debian/rules
+++ b/contrib/debian/rules
@@ -5,29 +5,29 @@
 #build/bitcoind::
 #	$(if $(filter nocheck,$(DEB_BUILD_OPTIONS)),,src/test_bitcoin)
 
-DEB_INSTALL_EXAMPLES_stratisd += debian/examples/*
-DEB_INSTALL_MANPAGES_stratisd += debian/manpages/*
+DEB_INSTALL_EXAMPLES_dnotesd += debian/examples/*
+DEB_INSTALL_MANPAGES_dnotesd += debian/manpages/*
 
 %:
 	dh --with bash-completion $@
 
 override_dh_auto_build:
-	cd src; $(MAKE) -f makefile.unix stratisd
+	cd src; $(MAKE) -f makefile.unix dnotesd
 	$(MAKE)
 
 override_dh_auto_clean:
-	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f stratis-qt; fi
+	if [ -f Makefile ]; then $(MAKE) clean; else rm -rf build/; rm -f dnotes-qt; fi
 	cd src; $(MAKE) -f makefile.unix clean
 
 override_dh_auto_configure:
-	qmake stratis-qt.pro USE_QRCODE=1
+	qmake dnotes-qt.pro USE_QRCODE=1
 
 override_dh_auto_test:
-	cd src; $(MAKE) -f makefile.unix test_stratis
-	src/test_stratis
+	cd src; $(MAKE) -f makefile.unix test_dnotes
+	src/test_dnotes
 
 # Ensure wrapper is set executable
-binary-post-install/stratisd:
-	chmod +x $(cdbs_curdestdir)usr/bin/stratisd
-binary-post-install/stratis-qt:
-	chmod +x $(cdbs_curdestdir)usr/bin/stratis-qt
+binary-post-install/dnotesd:
+	chmod +x $(cdbs_curdestdir)usr/bin/dnotesd
+binary-post-install/dnotes-qt:
+	chmod +x $(cdbs_curdestdir)usr/bin/dnotes-qt
