--- a/contrib/gitian-descriptors/gitian-win32.yml
+++ b/contrib/gitian-descriptors/gitian-win32.yml
@@ -1,5 +1,5 @@
 ---
-name: "stratis"
+name: "dnotes"
 suites:
 - "lucid"
 architectures:
@@ -12,12 +12,12 @@ packages:
 - "faketime"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/rat4/stratis.git"
-  "dir": "stratis"
+- "url": "https://github.com/rat4/dnotes.git"
+  "dir": "dnotes"
 files:
 - "qt-win32-4.7.4-gitian.zip"
 - "boost-win32-1.47.0-gitian.zip"
-- "stratis-deps-0.0.1.zip"
+- "dnotes-deps-0.0.1.zip"
 script: |
   #
   mkdir $HOME/qt
@@ -39,11 +39,11 @@ script: |
   mv include/boost .
   cd ..
   #
-  unzip stratis-deps-0.0.1.zip
+  unzip dnotes-deps-0.0.1.zip
   #
   find -type f | xargs touch --date="$REFERENCE_DATETIME"
   #
-  cd stratis
+  cd dnotes
   mkdir -p $OUTDIR/src
   git archive HEAD | tar -x -C $OUTDIR/src
   cp $OUTDIR/src/doc/README_windows.txt $OUTDIR/readme.txt
@@ -51,18 +51,18 @@ script: |
   export LD_PRELOAD=/usr/lib/faketime/libfaketime.so.1
   export FAKETIME=$REFERENCE_DATETIME
   export TZ=UTC
-  $HOME/qt/src/bin/qmake -spec unsupported/win32-g++-cross MINIUPNPC_LIB_PATH=$HOME/build/miniupnpc MINIUPNPC_INCLUDE_PATH=$HOME/build/ BDB_LIB_PATH=$HOME/build/db-4.8.30.NC/build_unix BDB_INCLUDE_PATH=$HOME/build/db-4.8.30.NC/build_unix BOOST_LIB_PATH=$HOME/build/boost_1_47_0/stage/lib BOOST_INCLUDE_PATH=$HOME/build/boost_1_47_0 BOOST_LIB_SUFFIX=-mt-s BOOST_THREAD_LIB_SUFFIX=_win32-mt-s OPENSSL_LIB_PATH=$HOME/build/openssl-1.0.1b OPENSSL_INCLUDE_PATH=$HOME/build/openssl-1.0.1b/include QRENCODE_LIB_PATH=$HOME/build/qrencode-3.2.0/.libs QRENCODE_INCLUDE_PATH=$HOME/build/qrencode-3.2.0 USE_QRCODE=1 INCLUDEPATH=$HOME/build DEFINES=BOOST_THREAD_USE_LIB BITCOIN_NEED_QT_PLUGINS=1 QMAKE_LRELEASE=lrelease QMAKE_CXXFLAGS=-frandom-seed=stratis QMAKE_LFLAGS=-frandom-seed=stratis USE_BUILD_INFO=1
+  $HOME/qt/src/bin/qmake -spec unsupported/win32-g++-cross MINIUPNPC_LIB_PATH=$HOME/build/miniupnpc MINIUPNPC_INCLUDE_PATH=$HOME/build/ BDB_LIB_PATH=$HOME/build/db-4.8.30.NC/build_unix BDB_INCLUDE_PATH=$HOME/build/db-4.8.30.NC/build_unix BOOST_LIB_PATH=$HOME/build/boost_1_47_0/stage/lib BOOST_INCLUDE_PATH=$HOME/build/boost_1_47_0 BOOST_LIB_SUFFIX=-mt-s BOOST_THREAD_LIB_SUFFIX=_win32-mt-s OPENSSL_LIB_PATH=$HOME/build/openssl-1.0.1b OPENSSL_INCLUDE_PATH=$HOME/build/openssl-1.0.1b/include QRENCODE_LIB_PATH=$HOME/build/qrencode-3.2.0/.libs QRENCODE_INCLUDE_PATH=$HOME/build/qrencode-3.2.0 USE_QRCODE=1 INCLUDEPATH=$HOME/build DEFINES=BOOST_THREAD_USE_LIB BITCOIN_NEED_QT_PLUGINS=1 QMAKE_LRELEASE=lrelease QMAKE_CXXFLAGS=-frandom-seed=dnotes QMAKE_LFLAGS=-frandom-seed=dnotes USE_BUILD_INFO=1
   make $MAKEOPTS
-  cp release/stratis-qt.exe $OUTDIR/
+  cp release/dnotes-qt.exe $OUTDIR/
   #
   cd src
   export LD_PRELOAD=/usr/lib/faketime/libfaketime.so.1
   export FAKETIME=$REFERENCE_DATETIME
   export TZ=UTC
-  make -f makefile.linux-mingw $MAKEOPTS DEPSDIR=$HOME/build stratisd.exe USE_UPNP=1 DEBUGFLAGS="-frandom-seed=stratis"
-  i586-mingw32msvc-strip stratisd.exe
+  make -f makefile.linux-mingw $MAKEOPTS DEPSDIR=$HOME/build dnotesd.exe USE_UPNP=1 DEBUGFLAGS="-frandom-seed=dnotes"
+  i586-mingw32msvc-strip dnotesd.exe
   mkdir $OUTDIR/daemon
-  cp stratisd.exe $OUTDIR/daemon
+  cp dnotesd.exe $OUTDIR/daemon
   cd ..
   mkdir nsis
   git archive HEAD | tar -x -C nsis
@@ -71,4 +71,4 @@ script: |
   cp ../../release/* ../release/
   cp ../../src/*.exe .
   makensis ../share/setup.nsi
-  cp ../share/stratis-*-win32-setup.exe $OUTDIR/
+  cp ../share/dnotes-*-win32-setup.exe $OUTDIR/
